{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 193,
  "lineage": "d068d245-926d-d04c-0cf7-6bf4c5517a9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0407a5f1314df92d5",
            "arn": "arn:aws:ec2:us-west-2:235494800322:elastic-ip/eipalloc-0407a5f1314df92d5",
            "domain": "vpc",
            "id": "eipalloc-0407a5f1314df92d5",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-70-214-132.us-west-2.compute.amazonaws.com",
            "public_ip": "54.70.214.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SandBox-nat-eip"
            },
            "tags_all": {
              "Name": "SandBox-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SandBox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0b27dd5c039480f",
            "arn": "arn:aws:ec2:us-west-2:235494800322:instance/i-07a74ccb0b01b3657",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SandBox-ssm-profile",
            "id": "i-07a74ccb0b01b3657",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6342b4f6d3ccdfb",
            "private_dns": "ip-10-0-10-101.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07117eaa0f7be7c54",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b107267be962d47",
            "tags": {
              "Name": "SandBox"
            },
            "tags_all": {
              "Name": "SandBox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d97b5593ad664a64"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.wazuh_ssm",
            "aws_iam_role.wazuh_ssm",
            "aws_security_group.wazuh_server_sg",
            "aws_subnet.private_a",
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bake_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:internet-gateway/igw-006674a82a4975801",
            "id": "igw-006674a82a4975801",
            "owner_id": "235494800322",
            "tags": {
              "Name": "SandBox-bake-igw"
            },
            "tags_all": {
              "Name": "SandBox-bake-igw"
            },
            "vpc_id": "vpc-005ab38b6f99d9220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bake_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0407a5f1314df92d5",
            "association_id": "eipassoc-0a92c4e31602ce305",
            "connectivity_type": "public",
            "id": "nat-0736c104d6f3f8d49",
            "network_interface_id": "eni-0f5bc86ffb9149987",
            "private_ip": "10.0.1.211",
            "public_ip": "54.70.214.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa9db1bc2a35a497",
            "tags": {
              "Name": "SandBox-bake-nat"
            },
            "tags_all": {
              "Name": "SandBox-bake-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.bake_igw",
            "aws_subnet.public_bake",
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05913e294e3f686311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0736c104d6f3f8d49",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05913e294e3f68631",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.bake_igw",
            "aws_nat_gateway.bake_nat",
            "aws_route_table.private",
            "aws_subnet.public_bake",
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:route-table/rtb-05913e294e3f68631",
            "id": "rtb-05913e294e3f68631",
            "owner_id": "235494800322",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SandBox-private-rt"
            },
            "tags_all": {
              "Name": "SandBox-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-005ab38b6f99d9220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_bake",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:route-table/rtb-035d227cd66c48d0d",
            "id": "rtb-035d227cd66c48d0d",
            "owner_id": "235494800322",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006674a82a4975801",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SandBox-bake-rt"
            },
            "tags_all": {
              "Name": "SandBox-bake-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-005ab38b6f99d9220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bake_igw",
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae030cbb7042fd0",
            "route_table_id": "rtb-05913e294e3f68631",
            "subnet_id": "subnet-02b107267be962d47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_bake",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a68770fd7175ba5",
            "route_table_id": "rtb-035d227cd66c48d0d",
            "subnet_id": "subnet-0fa9db1bc2a35a497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bake_igw",
            "aws_route_table.public_bake",
            "aws_subnet.public_bake",
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wazuh_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:security-group/sg-0d97b5593ad664a64",
            "description": "SSM-only access, outbound HTTPS for SSM + github",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS out - SSM control plane + GitHub",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d97b5593ad664a64",
            "ingress": [],
            "name": "SandBox-sg",
            "name_prefix": "",
            "owner_id": "235494800322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SandBox-sg"
            },
            "tags_all": {
              "Name": "SandBox-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-005ab38b6f99d9220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:subnet/subnet-02b107267be962d47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b107267be962d47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235494800322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SandBox-private-a"
            },
            "tags_all": {
              "Name": "SandBox-private-a"
            },
            "vpc_id": "vpc-005ab38b6f99d9220"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_bake",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:subnet/subnet-0fa9db1bc2a35a497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa9db1bc2a35a497",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235494800322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SandBox-bake-public"
            },
            "tags_all": {
              "Name": "SandBox-bake-public"
            },
            "vpc_id": "vpc-005ab38b6f99d9220"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.SandBox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SandBox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:235494800322:vpc/vpc-005ab38b6f99d9220",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9ef112e390e27a7",
            "default_route_table_id": "rtb-06e7d09b4427ebe21",
            "default_security_group_id": "sg-035b69cdbf5bf2cd5",
            "dhcp_options_id": "dopt-078ea92cafd4010ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005ab38b6f99d9220",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e7d09b4427ebe21",
            "owner_id": "235494800322",
            "tags": {
              "Name": "SandBox-vpc"
            },
            "tags_all": {
              "Name": "SandBox-vpc"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}